<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    app:cardBackgroundColor="@android:color/holo_blue_light"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/fragment_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/playerImage"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/image_view" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/firstNameText"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_margin="0dp"
                    android:ellipsize="marquee"
                    android:gravity="bottom"
                    android:singleLine="true"
                    android:text="@string/first_name"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/lastNameText"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_margin="0dp"
                    android:ellipsize="marquee"
                    android:gravity="top"
                    android:singleLine="true"
                    android:text="@string/last_name"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="0dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/holo_blue_dark"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/from"
                        android:textColor="@android:color/holo_blue_bright"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/from_club"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/club_names"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/club_image1"
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_launcher_background"
                        android:contentDescription="@string/image_view" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/holo_blue_dark"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/to"
                        android:textColor="@android:color/holo_blue_bright"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/to_club"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:gravity="center_vertical"
                        android:text="@string/to_club"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <ImageView
                        android:id="@+id/club_image"
                        android:layout_width="25dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_launcher_background"
                        android:contentDescription="@string/image_view" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/transfer_date"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/transfer_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/date_value"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/transfer_currency"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/transfer_currency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/currency_value"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="15sp" />

            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/card_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="fragment_container"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>