<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    tools:context="MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/statBarColor" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/most"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
                android:gravity="start|center_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/transfer2"
                android:textSize="25sp"
                android:textColor="@android:color/holo_blue_bright"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
                android:gravity="start|center_vertical" />

        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <TextView
        android:id="@+id/transfer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/transfer"
        android:textSize="20sp"
        android:textColor="@android:color/holo_blue_bright" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>